# dashsrv

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: Basic.h  Hardware.h  MGClient.h
include/Minecraft/: MCDef.h  MCPacket.h  MCQuery.h  Status.h  String.h
include/Server/: CacheContainer.h  Client.h  Config.h  Routes.h  ServiceHandler.h
include/Server/Core/: HTTP.h  Rand.h  Routing.h  Server.h
resources/static/common/: 404.html
resources/static/css/: basic-mobile.css  basic.css  dash-mobile.css  dash.css
resources/static/js/: dash.js
resources/static/pages/: dashboard.html
scripts/: setup.sh
source/: Basic.cpp  Dashsrv.cpp  Hardware.cpp  MGClient.cpp
source/Minecraft/: MCPacket.cpp  MCQuery.cpp  Status.cpp  String.cpp
source/Server/: Config.cpp  Routes.cpp  ServiceHandler.cpp
source/Server/Core/: HTTP.cpp  Rand.cpp  Server.cpp
